force-app/main/default/objects/LittleBitsAPI__c/LittleBitsAPI__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>LittleBits</label>
</CustomObject>