force-app/main/default/objects/LittleBitsAPI__c/fields/DeviceID__c.field-meta.xml
<CustomField>
    <fullName>DeviceID__c</fullName>
    <label>Device ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>