force-app/main/default/objects/LittleBitsAPI__c/fields/SubscriptionSiteURL__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionSiteURL__c</fullName>
    <inlineHelpText
  >URL of the predefined Force.com Site in this org used to host incoming device events</inlineHelpText>
    <label>Subscription Site URL</label>
    <length>80</length>
    <type>Text</type>
</CustomField>